add reset button

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
             <div value='7' id="cellEight" class="cell bordersDown"></div>
             <div value='8' id="cellNine" class="cell bordersRight bordersDown"></div>
         </div>
-        <!-- <div class="buttonContainer">
-            <button>HUMAN</button>
-            <button>COMPUTER</button>
-        </div> -->
+        <div class="buttonContainer">
+            <button class="resetBtn" id="resetBtn">RESET</button>
+            <button>HUMAN(doesn't work yet)</button>
+            <button>COMPUTER(doesn't work yet)</button>
+        </div> 
     </div>
     <script src="script.js"></script>
 </body>
